--- a/app.css
+++ b/app.css
@@ -228,7 +228,10 @@ pre {
 }
 #popup button {
     padding: 10px 20px;
-    margin: 0 25px;
+    margin: 0;
+}
+#popup button:first-of-type {
+    margin-right: 30px;
 }
 #overlay {
     display: none;
